[package]
name = "set-luminance"
version = "1.1.0"
edition = "2021"
description = "Set the luminance of my external monitor from the command line, on macOS (Apple Silicon)."

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
core-foundation = "0.10.0"
env_logger = "0.11.8"
log = "0.4.27"
objc = "0.2.7"
